2009-08-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Uniformize library to support libcwd.
	* include/roboptim/core/constant-function.hh,
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/derivable-parametrized-function.hh,
	* include/roboptim/core/finite-difference-gradient.hh,
	* include/roboptim/core/function.hh,
	* include/roboptim/core/fwd.hh,
	* include/roboptim/core/generic-solver.hh,
	* include/roboptim/core/identity-function.hh,
	* include/roboptim/core/io.hh,
	* include/roboptim/core/linear-function.hh,
	* include/roboptim/core/n-times-derivable-function.hh,
	* include/roboptim/core/numeric-linear-function.hh,
	* include/roboptim/core/numeric-quadratic-function.hh,
	* include/roboptim/core/parametrized-function.hh,
	* include/roboptim/core/problem.hh,
	* include/roboptim/core/quadratic-function.hh,
	* include/roboptim/core/result-with-warnings.hh,
	* include/roboptim/core/result.hh,
	* include/roboptim/core/solver-error.hh,
	* include/roboptim/core/solver-factory.hh,
	* include/roboptim/core/solver-warning.hh,
	* include/roboptim/core/solver.hh,
	* include/roboptim/core/twice-derivable-function.hh,
	* include/roboptim/core/util.hh,
	* include/roboptim/core/visualization/fwd.hh,
	* include/roboptim/core/visualization/gnuplot-commands.hh,
	* include/roboptim/core/visualization/gnuplot-function.hh,
	* include/roboptim/core/visualization/gnuplot.hh,
	* src/constant-function.cc,
	* src/derivable-function.cc,
	* src/finite-difference-gradient.cc,
	* src/function.cc,
	* src/generic-solver.cc,
	* src/identity-function.cc,
	* src/linear-function.cc,
	* src/numeric-linear-function.cc,
	* src/numeric-quadratic-function.cc,
	* src/quadratic-function.cc,
	* src/result-with-warnings.cc,
	* src/result.cc,
	* src/roboptim-core-dummy-plugin.cc,
	* src/solver-error.cc,
	* src/solver-warning.cc,
	* src/twice-derivable-function.cc,
	* src/util.cc,
	* src/visualization/gnuplot-commands.cc,
	* src/visualization/gnuplot.cc,